# lineup_widget

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  appveyor.yml  build.sh  codecov.yml  docker-compose.yml  install.json  lineup_widget.json  package-lock.json  package.json  pytest.ini  setup.cfg  setup.py  setupbase.py  tslint.json  webpack.config.js
.circleci/: config.yml
.github/workflows/: build.yml  ci.yml
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
js/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/lib/: embed.ts  example.js  extension.js  index.ts  labplugin.js  labplugin.ts  style.css  utils.ts  version.ts  widget.ts
lineup_widget/: __init__.py  _frontend.py  _version.py  example.py  lineup.py
lineup_widget/nbextension/: __init__.py  extension.js
lineup_widget/nbextension/static/: extension.js
src/: extension.ts  plugin.ts  tsconfig.json  utils.ts  version.ts  widget.ts
tests/: conftest.py  karma.conf.js  test_example.py  test_lineup.py  test_nbextension_path.py
tests/src/: index.spec.ts  tsconfig.json  utils.spec.ts
